[package]
name = "googlea"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
google-calendar3 = { version = "6.0.0", features = ["yup-oauth2"] }
hyper = { version = "1.5.1", features = ["client", "http1"] }
hyper-rustls = "0.27.3"
hyper-util = "0.1.10"
log = "0.4.22"
oauth2 = "4.4.2"
rustls = "0.23.19"
serde = { version = "1.0.215", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.41.1", features = ["full"] }
warp = "0.3.7"
webbrowser = "1.0.2"
